# OpenCL-DevContainer

./: .gitignore  README.md  install-ubuntu-docker-nvidia.sh  main.cpp
.devcontainer/: devcontainer.json
.devcontainer/nvidia/: Dockerfile
.github/workflows/: docker-image.yml
PlatformCheck/: CMakeLists.txt  hello_world.cl  main.cpp
Samples/AMD SDK/DilationFilter/: SobelFilterImage_Kernels.cl
Samples/AMD SDK/ToGrayscale/: SobelFilterImage_Kernels.cl
Samples/DilationFilter/: SobelFilterImage
Samples/MedianFilter/: SobelFilterImage_Kernels.cl
Samples/NVIDIA_GPU_Computing_SDK/OpenCL/src/oclMedianFilter/: MedianFilter.cl
Samples/NVIDIA_GPU_Computing_SDK/OpenCL/src/oclRecursiveGaussian/: RecursiveGaussian.cl
Samples/NVIDIA_GPU_Computing_SDK/OpenCL/src/oclSobelFilter/: SobelFilter.cl
Samples/Recompile/: CLUtil.hpp  CMakeCache.txt  Makefile  SobelFilterImage.cpp  SobelFilterImage.hpp  cmake_install.cmake
Samples/TextToHex/: HelloWorld.cpp  HelloWorld_Kernel.cl
